--- a/nginx.conf
+++ b/nginx.conf
@@ -12,8 +12,28 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /api/v1/proxy {
-        proxy_pass http://proxy:8000/api/v1/proxy;
+    location /api/v1/conversation {
+        proxy_pass http://conversation:8000/api/v1/conversation;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_http_version 1.1;
+        proxy_set_header Connection '';
+        proxy_set_header Accept text/event-stream;
+        proxy_buffering off;
+        proxy_cache off;
+        gzip off;
+        chunked_transfer_encoding on;
+        add_header X-Accel-Buffering no;
+
+        proxy_read_timeout 1h;
+        proxy_send_timeout 1h;
+    }
+
+    location /api/v1/chat {
+        proxy_pass http://chat:8000/api/v1/chat;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
