--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,16 +1,16 @@
 FROM python:3.12-slim
 
-ARG SERVICE
+ARG SERVICE_NAME
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONPATH=/app
 
 WORKDIR /app
 
-COPY services/${SERVICE}/requirements.txt ./
+COPY services/${SERVICE_NAME}/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY services/${SERVICE}/. .
+COPY services/${SERVICE_NAME}/. .
 COPY lib/ ./lib/
 
 EXPOSE 8000
