--- a/.env.dev
+++ b/.env.dev
@@ -8,26 +8,12 @@ JWT_ACCESS_TOKEN_EXPIRE_SECONDS=60000
 JWT_REFRESH_TOKEN_EXPIRE_SECONDS=600000
 ## Kafka
 KAFKA_BOOTSTRAP_SERVERS=broker-1:19092,broker-2:19092,broker-3:19092
-## Backend
-PUBLIC_BACKEND_API_URL=http://localhost
 
 
 # Kafka
 PUBLIC_KAFKA_BROKER1_PORT=29092
 PUBLIC_KAFKA_BROKER2_PORT=39092
 PUBLIC_KAFKA_BROKER3_PORT=49092
-
-
-# # Keycloak
-# ## keycloak
-# PUBLIC_KC_PORT=8080
-# PUBLIC_KC_HOSTNAME=localhost
-# KC_ADMIN=admin
-# KC_ADMIN_PASSWORD=supersecret!
-# ## keycloak-db
-# KC_POSTGRES_DB=keycloak
-# KC_POSTGRES_USER=admin
-# KC_POSTGRES_PASSWORD=supersecret!
 
 
 # Infra
@@ -42,10 +28,12 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=supersecret!
 ## s3
-S3_ENDPOINT=http://s3:9000
+S3_ENDPOINT=http://s3-gateway:9000
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_REGION_NAME=us-east-1
+S3_BUCKET_NAME=default
+S3_PRESIGN_EXPIRE_SECONDS=900
 ## neo4j
 NEO4J_HOST=neo4j
 NEO4J_PORT=7687
