--- a/.env.dev
+++ b/.env.dev
@@ -28,7 +28,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=supersecret!
 ## s3
-S3_ENDPOINT=http://s3-gateway:9000
+S3_ENDPOINT=http://s3:9000
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_REGION_NAME=us-east-1
