--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,8 @@ server {
     }
 
     location /api/v1/storage {
+        client_max_body_size 10G;
+        proxy_request_buffering off;
         proxy_pass http://s3-gateway:8000/api/v1/storage;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
