--- a/.env.dev
+++ b/.env.dev
@@ -23,6 +23,12 @@ POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=supersecret!
+## mongo
+MONGO_DB=mongo
+MONGO_HOST=mongo
+MONGO_PORT=27017
+MONGO_USER=mongoadmin
+MONGO_PASSWORD=supersecret!
 ## redis
 REDIS_HOST=redis
 REDIS_PORT=6379
