--- a/docker-compose-infra.yaml
+++ b/docker-compose-infra.yaml
@@ -15,6 +15,17 @@ services:
       - /var/lib/postgresql/data
     ports:
       - 5432:5432
+    
+  mongo:
+    image: mongo
+    environment:
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+    ports:
+      - 27017:27017
+    volumes:
+      - /data/db
 
   redis:
     image: redis
