--- a/nginx.conf
+++ b/nginx.conf
@@ -58,9 +58,17 @@ server {
     }
 
     location /api/v1/storage {
-        client_max_body_size 10G;
+        client_max_body_size 50M;
         proxy_request_buffering off;
         proxy_pass http://s3-gateway:8000/api/v1/storage;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /api/v1/knowledgebase {
+        client_max_body_size 50M;
+        proxy_pass http://knowledgebase:8000/api/v1/knowledgebase;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
