--- a/docker/python/Dockerfile.dev
+++ b/docker/python/Dockerfile.dev
@@ -7,6 +7,8 @@ ENV PYTHONPATH=/app
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y curl && apt-get clean
+
 COPY services/${SERVICE_NAME}/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
