--- a/docker-compose-infra.yaml
+++ b/docker-compose-infra.yaml
@@ -6,8 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
-      test:
-        ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 3s
       retries: 30
@@ -15,7 +14,7 @@ services:
       - /var/lib/postgresql/data
     ports:
       - 5432:5432
-    
+
   mongo:
     image: mongo
     environment:
@@ -26,6 +25,12 @@ services:
       - 27017:27017
     volumes:
       - /data/db
+    healthcheck:
+      test: >
+        mongosh --username ${MONGO_USER} --password ${MONGO_PASSWORD} --authenticationDatabase admin --eval "db.adminCommand({ping:1})" || exit 1
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   redis:
     image: redis
@@ -34,6 +39,11 @@ services:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - 6379:6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   s3:
     image: minio/minio
@@ -46,6 +56,11 @@ services:
       - 9001:9001
     volumes:
       - /data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   neo4j:
     image: neo4j
@@ -65,6 +80,11 @@ services:
       - /data
       - /logs
       - /var/lib/neo4j/import
+    healthcheck:
+      test: ["CMD", "wget", "http://localhost:7474"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
 networks:
   shared-net:
