--- a/docker-compose-service.yaml
+++ b/docker-compose-service.yaml
@@ -8,13 +8,6 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./cert.pem:/etc/ssl/certs/cert.pem
       - ./key.pem:/etc/ssl/certs/key.pem
-    depends_on:
-      # - template
-      # - template-worker
-      - auth
-      - chat
-      - conversation
-      - embeddings
 
   # template:
   #   build:
@@ -61,6 +54,11 @@ services:
     volumes:
       - ./services/auth:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   chat:
     build:
@@ -76,6 +74,11 @@ services:
     volumes:
       - ./services/chat:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   conversation:
     build:
@@ -91,6 +94,11 @@ services:
     volumes:
       - ./services/conversation:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   embeddings:
     build:
@@ -106,6 +114,11 @@ services:
     volumes:
       - ./services/embeddings:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
   s3-gateway:
     extra_hosts:
@@ -123,6 +136,24 @@ services:
     volumes:
       - ./services/s3-gateway:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
+
+  s3-init-sidecar:
+    image: amazon/aws-cli
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "sleep 5 && aws --endpoint-url=http://s3:9000 s3 mb s3://${S3_BUCKET_NAME} || true"
+    env_file:
+      - .env.dev
+    environment:
+      - AWS_ACCESS_KEY_ID=${S3_ACCESS_KEY}
+      - AWS_SECRET_ACCESS_KEY=${S3_SECRET_KEY}
+    depends_on:
+      - s3-gateway
 
   knowledgebase:
     build:
@@ -138,6 +169,11 @@ services:
     volumes:
       - ./services/knowledgebase:/app
       - ./common:/app/common
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
 networks:
   shared-net:
