--- a/docker/python/Dockerfile.knowledgebase.dev
+++ b/docker/python/Dockerfile.knowledgebase.dev
@@ -7,6 +7,7 @@ ENV PYTHONPATH=/app
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y curl && apt-get clean
 RUN apt-get update && apt-get install -y poppler-utils tesseract-ocr && rm -rf /var/lib/apt/lists/*
 
 COPY services/${SERVICE_NAME}/requirements.txt ./
