--- a/.env.dev
+++ b/.env.dev
@@ -17,16 +17,17 @@ PUBLIC_KAFKA_BROKER3_PORT=49092
 
 
 # Infra
+# *_HOST : docker
 ## postgres
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_DB=postgres
+POSTGRES_DB=default
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=supersecret!
 ## mongo
-MONGO_DB=mongo
 MONGO_HOST=mongo
 MONGO_PORT=27017
+MONGO_DB=default
 MONGO_USER=mongoadmin
 MONGO_PASSWORD=supersecret!
 ## redis
@@ -45,7 +46,7 @@ NEO4J_HOST=neo4j
 NEO4J_PORT=7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=supersecret!
-NEO4J_DATABASE=neo4j
+NEO4J_DB=default
 
 
 # API
