--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,4 @@
 server {
-    # location /api/v1/template {
-    #     proxy_pass http://template:8000/api/v1/template;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # }
     location /api/v1/auth {
         proxy_pass http://auth:8000/api/v1/auth;
         proxy_set_header Host $host;
@@ -73,4 +67,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /api/v1/mcp {
+        proxy_pass http://mcp:8000/mcp;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
 }
