--- a/docker-compose-infra.yaml
+++ b/docker-compose-infra.yaml
@@ -72,7 +72,7 @@ services:
       NEO4J_apoc_export_file_enabled: "true"
       NEO4J_apoc_import_file_enabled: "true"
       NEO4J_server_directories_import: "/var/lib/neo4j/import"
-      NEO4J_initial_dbms_default__database: ${NEO4J_DATABASE}
+      NEO4J_initial_dbms_default__database: ${NEO4J_DB}
     ports:
       - 7474:7474
       - 7687:7687
