--- a/docker/python/Dockerfile.dev
+++ b/docker/python/Dockerfile.dev
@@ -9,7 +9,7 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y curl && apt-get clean
 
-COPY services/${SERVICE_NAME}/requirements.txt ./
+COPY service/${SERVICE_NAME}/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
