--- a/nginx.conf
+++ b/nginx.conf
@@ -1,73 +1,4 @@
 server {
-    location /api/v1/auth {
-        proxy_pass http://auth:8000/api/v1/auth;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /api/v1/chat {
-        proxy_pass http://chat:8000/api/v1/chat;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_http_version 1.1;
-        proxy_set_header Connection '';
-        proxy_set_header Accept text/event-stream;
-        proxy_buffering off;
-        proxy_cache off;
-        gzip off;
-        chunked_transfer_encoding on;
-        add_header X-Accel-Buffering no;
-
-        proxy_read_timeout 1h;
-        proxy_send_timeout 1h;
-    }
-
-    location /api/v1/conversation {
-        proxy_pass http://conversation:8000/api/v1/conversation;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_http_version 1.1;
-        proxy_set_header Connection '';
-        proxy_set_header Accept text/event-stream;
-        proxy_buffering off;
-        proxy_cache off;
-        gzip off;
-        chunked_transfer_encoding on;
-        add_header X-Accel-Buffering no;
-
-        proxy_read_timeout 1h;
-        proxy_send_timeout 1h;
-    }
-
-    location /api/v1/embeddings {
-        proxy_pass http://embeddings:8000/api/v1/embeddings;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /api/v1/storage {
-        client_max_body_size 50M;
-        proxy_request_buffering off;
-        proxy_pass http://s3-gateway:8000/api/v1/storage;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /api/v1/knowledgebase {
-        client_max_body_size 50M;
-        proxy_pass http://knowledgebase:8000/api/v1/knowledgebase;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
     location /api/v1/mcp {
         proxy_pass http://mcp:8000/mcp;
         proxy_set_header Host $host;
@@ -75,4 +6,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /api/v1/template {
+        proxy_pass http://template:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
