--- a/service/template/requirements.txt
+++ b/service/template/requirements.txt
@@ -2,6 +2,7 @@ fastapi[standard]
 
 sqlalchemy
 asyncpg
+psycopg[binary]
 python-jose
 bcrypt
 pydantic
@@ -9,3 +10,6 @@ redis
 aioboto3
 aiokafka
 neo4j
+langchain
+celery
+motor
