--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env*
+!.env.example*
+
 # Created by https://www.toptal.com/developers/gitignore/api/go,python,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,python,node
 
