removed: .env file

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Shared
-## Mode
-PROJECT_NAME=OpenSchema
-APP_ENV=dev
-## JWT
-JWT_SECRET=supersecret!
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_SECONDS=60000
-JWT_REFRESH_TOKEN_EXPIRE_SECONDS=600000
+# # Shared
+# ## Mode
+# PROJECT_NAME=OpenSchema
+# APP_ENV=dev
+# ## JWT
+# JWT_SECRET=supersecret!
+# JWT_ALGORITHM=HS256
+# JWT_ACCESS_TOKEN_EXPIRE_SECONDS=60000
+# JWT_REFRESH_TOKEN_EXPIRE_SECONDS=600000
 
 # infra
 ## kafka
