--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,4 +1,3 @@
-################################################################################
 FROM python:3.12-slim AS installer
 
 ARG SERVICE_NAME
@@ -8,10 +7,7 @@ WORKDIR /app
 RUN pip install --upgrade pip
 COPY service/${SERVICE_NAME}/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-RUN rm requirements.txt
 
-
-################################################################################
 FROM installer
 
 ARG SERVICE_NAME
@@ -29,5 +25,5 @@ COPY common ./common
 EXPOSE 8000
 
 # CMD [ "fastapi", "dev", "main.py", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
-# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-CMD uvicorn ${SERVICE_NAME}.main:app --host 0.0.0.0 --port 8000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# CMD uvicorn ${SERVICE_NAME}.main:app --host 0.0.0.0 --port 8000
