--- a/service/template/requirements.txt
+++ b/service/template/requirements.txt
@@ -1,4 +1,5 @@
 fastapi[standard]
+uvicorn[standard]
 
 sqlalchemy
 asyncpg
@@ -6,6 +7,7 @@ psycopg[binary]
 python-jose
 bcrypt
 pydantic
+pydantic[email]
 redis
 aioboto3
 aiokafka
@@ -13,3 +15,4 @@ neo4j
 langchain
 celery
 motor
+psutil
