--- a/docker-compose-service.yaml
+++ b/docker-compose-service.yaml
@@ -9,69 +9,57 @@ services:
       - ./cert.pem:/etc/ssl/certs/cert.pem
       - ./key.pem:/etc/ssl/certs/key.pem
 
-  # template-worker:
+  # celery-worker:
   #   build:
   #     context: .
   #     dockerfile: docker/python/Dockerfile.dev
   #     args:
-  #       - SERVICE=template
-  #   command: ["python", "worker.py"]
+  #       - SERVICE_NAME=celery
+  #   command: >
+  #     celery -A main worker -l info -Q q_default
   #   env_file:
   #     - .env.dev
   #   environment:
-  #     - SERVICE_NAME=auth
-  #     - SERVICE_ID=template.service
-  #   #volumes:
-  #   #  - ./service/template:/app
-  #   #  - ./common:/app/common
-
-  celery-worker:
-    build:
-      context: .
-      dockerfile: docker/python/Dockerfile.dev
-      args:
-        - SERVICE_NAME=celery
-    command: >
-      celery -A main worker -l info -Q q_default
-    env_file:
-      - .env.dev
-    environment:
-      - SERVICE_NAME=celery
-      - SERVICE_ID=celery.service
-    volumes:
-      - ./service/celery:/app
-      - ./common:/app/common
+  #     - SERVICE_NAME=celery
+  #     - SERVICE_ID=celery.service
+  #   volumes:
+  #     - ./src/service/celery:/app
+  #     - ./src/common:/app/common
 
   mcp:
     build:
       context: .
       dockerfile: docker/python/Dockerfile.dev
       args:
-        - SERVICE_NAME=mcp
-    command: ['python', 'main.py']
+        - SERVICE_DIR=mcp
     env_file:
       - .env.dev
     environment:
-      - SERVICE_NAME=mcp
       - SERVICE_ID=mcp.service
+      - SERVICE_NAME=mcp
+      - SERVICE_API_VERSION=v1
+      - SERVICE_DB_SCHEMA=mcp
+    command: ['python', 'main.py']
     volumes:
-      - ./service/mcp:/app
-      - ./common:/app/common
+      - ./src/service/mcp:/app
+      - ./src/common:/app/common
 
   template:
     build:
       context: .
       dockerfile: docker/python/Dockerfile.dev
       args:
-        - SERVICE_NAME=template
+        - SERVICE_DIR=template
     env_file:
       - .env.dev
     environment:
-      - SERVICE_NAME=template
       - SERVICE_ID=template.service
+      - SERVICE_NAME=template
+      - SERVICE_API_VERSION=v1
+      - SERVICE_DB_SCHEMA=template
     volumes:
-      - ./service/template:/app
-      - ./common:/app/common
+      - ./src/service/template:/app
+      - ./src/common:/app/common
 
 networks:
   shared-net:
