add: celery state

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,20 @@ S3_SECRET_KEY=minioadmin
 S3_REGION_NAME=us-east-1
 S3_BUCKET_NAME=default
 
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=rabbitadmin
+RABBITMQ_PASSWORD=rabbitadmin
+RABBITMQ_VHOST=default
+
 CELERY_REDIS_HOST=redis
 CELERY_REDIS_PORT=6379
 CELERY_REDIS_USER=default
 CELERY_REDIS_PASSWORD=supersecret!
 CELERY_REDIS_DB=1
+
+CELERY_RABBITMQ_HOST=rabbitmq
+CELERY_RABBITMQ_PORT=5672
+CELERY_RABBITMQ_USER=rabbitadmin
+CELERY_RABBITMQ_PASSWORD=rabbitadmin
+CELERY_RABBITMQ_VHOST=default
