--- a/docker-compose-service.yaml
+++ b/docker-compose-service.yaml
@@ -1,13 +1,21 @@
 services:
-  nginx:
-    image: nginx
+  #nginx:
+  #  image: nginx
+  #  ports:
+  #    - 80:80
+  #    - 443:443
+  #  volumes:
+  #    - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  #    - ./cert.pem:/etc/ssl/certs/cert.pem
+  #    - ./key.pem:/etc/ssl/certs/key.pem
+
+  gateway:
+    build:
+      context: src/service/gateway
+      dockerfile: Dockerfile
     ports:
       - 80:80
       - 443:443
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./cert.pem:/etc/ssl/certs/cert.pem
-      - ./key.pem:/etc/ssl/certs/key.pem
 
   mcp:
     build:
