--- a/docker-compose-service.yaml
+++ b/docker-compose-service.yaml
@@ -1,11 +1,11 @@
 services:
-  nginx:
+  nginx-api-reverse-proxy:
     image: nginx
     ports:
-      - 80:80
-      - 443:443
+      - 8080:80
+      - 8443:443
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/api.conf:/etc/nginx/conf.d/default.conf
       - ./cert.pem:/etc/ssl/certs/cert.pem
       - ./key.pem:/etc/ssl/certs/key.pem
 
@@ -19,9 +19,10 @@ services:
       - .env.dev
     command: ['python', 'main.py']
     environment:
-      - SERVICE_ID=mcp.service
+      - SERVICE_TYPE=api
       - SERVICE_NAME=mcp
-      - SERVICE_API_VERSION=v1
+      - SERVICE_VERSION=v1
+      - SERVICE_ID=mcp.api
       - SERVICE_DB_SCHEMA=mcp
     volumes:
       - ./src/service/mcp:/app
@@ -36,9 +37,10 @@ services:
     env_file:
       - .env.dev
     environment:
-      - SERVICE_ID=chat.service
+      - SERVICE_TYPE=api
       - SERVICE_NAME=chat
-      - SERVICE_API_VERSION=v1
+      - SERVICE_VERSION=v1
+      - SERVICE_ID=chat.api
       - SERVICE_DB_SCHEMA=chat
     volumes:
       - ./src/service/chat:/app
@@ -53,9 +55,10 @@ services:
     env_file:
       - .env.dev
     environment:
-      - SERVICE_ID=auth.service
+      - SERVICE_TYPE=api
       - SERVICE_NAME=auth
-      - SERVICE_API_VERSION=v1
+      - SERVICE_VERSION=v1
+      - SERVICE_ID=auth.api
       - SERVICE_DB_SCHEMA=auth
     volumes:
       - ./src/service/auth:/app
