--- a/src/service/gateway/default.conf
+++ b/src/service/gateway/default.conf
@@ -42,3 +42,65 @@ server {
     #    deny  all;
     #}
 }
+
+#server {
+#    listen 80;
+#    listen [::]:80;
+#
+#    server_name host-template.openschema.io;
+#
+#    location ~* ^/ui/v1/(.*)$ {
+#        return 204;
+#    }
+#
+#    location / {
+#        #if ($request_method = 'OPTIONS') {
+#        #    add_header 'Access-Control-Allow-Origin' '*';
+#        #    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
+#        #    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+#        #    add_header 'Access-Control-Allow-Credentials' 'true';
+#        #    return 204;
+#        #}
+#        #add_header 'Access-Control-Allow-Origin' '*';
+#        #add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
+#        #add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+#        #add_header 'Access-Control-Allow-Credentials' 'true';
+#
+#        proxy_pass http://host-template:80;
+#        proxy_set_header Host $host;
+#        proxy_set_header X-Real-IP $remote_addr;
+#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#    }
+#}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name chat.openschema.io;
+
+    location / {
+        proxy_pass http://remote-chat-ui:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name multichat.openschema.io;
+
+    location ~* ^/ui/v1/(.*)$ {
+        return 204;
+    }
+
+    location / {
+        proxy_pass http://host-multichat-ui:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
