--- a/src/service/gateway/conf.d/ui.conf
+++ b/src/service/gateway/conf.d/ui.conf
@@ -13,8 +13,14 @@ server {
     #}
 
     location /ui/v1/chat {
-        # rewrite ^/ui/v1/chat/(.*)$ /$1 break;
         proxy_pass http://remote-chat-ui:80/ui/v1/chat;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /ui/v1/auth {
+        proxy_pass http://remote-auth-ui:80/ui/v1/auth;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
