--- a/src/service/gateway/conf.d/ui.conf
+++ b/src/service/gateway/conf.d/ui.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location /ui/v1/auth {
-        proxy_pass http://remote-auth-ui:80/ui/v1/auth;
+        proxy_pass http://remote-auth-ui;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
