add: vite setting

--- a/docker/nginx-ui-reverse-proxy/nginx/conf.d/default.conf
+++ b/docker/nginx-ui-reverse-proxy/nginx/conf.d/default.conf
@@ -3,19 +3,19 @@ server {
   server_name _;
 
   location /ui/v1/auth/ {
-    proxy_pass http://remote-auth-ui:2000/ui/v1/auth/;
+    proxy_pass http://remote-auth-ui:2000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
 
   location /ui/v1/chat/ {
-    proxy_pass http://remote-chat-ui:2000/ui/v1/chat/;
+    proxy_pass http://remote-chat-ui:2000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
 
   location /ui/v1/multichat/ {
-    proxy_pass http://host-multichat-ui:2000/ui/v1/multichat/;
+    proxy_pass http://host-multichat-ui:2000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
