--- a/src/web/package.json
+++ b/src/web/package.json
@@ -14,6 +14,7 @@
     "@module-federation/vite": "^1.8.1"
   },
   "dependencies": {
+    "react-markdown": "^10.1.0",
     "zustand": "^5.0.8"
   }
 }
