--- a/src/service/gateway/conf.d/ui.conf
+++ b/src/service/gateway/conf.d/ui.conf
@@ -4,25 +4,30 @@ server {
 
     server_name ui.openschema.io localhost;
 
-    #location /ui/v1/remote-template {
-    #    # rewrite ^/ui/v1/remote-template/(.*)$ /$1 break;
-    #    proxy_pass http://remote-template:80/ui/v1/remote-template;
-    #    proxy_set_header Host $host;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #}
+    location /ui/v1/remote-template {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
 
-    location /ui/v1/chat {
-        proxy_pass http://remote-chat-ui:80/ui/v1/chat;
+        # rewrite ^/ui/v1/remote-template-ui/(.*)$ /$1 break;
+        proxy_pass http://remote-template-ui:2000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # TODO proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /ui/v1/chat {
+        proxy_pass http://remote-chat-ui:2000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        # TODO proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /ui/v1/auth {
         proxy_pass http://remote-auth-ui;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # TODO proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
