--- a/docker/web/nginx/conf.d/default.conf
+++ b/docker/web/nginx/conf.d/default.conf
@@ -44,6 +44,10 @@ server {
   }
 
   location / {
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, PATCH, OPTIONS" always;
+    add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
+
     try_files $uri /index.html;
   }
 }
