--- a/src/service/gateway/conf.d/default.conf
+++ b/src/service/gateway/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  openschema.io www.openschema.io;
+    server_name  openschema.io www.openschema.io openschema.elpai.org;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
@@ -47,7 +47,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name chat.openschema.io;
+    server_name chat.openschema.io openschema-chat.elpai.org;
 
     location / {
         proxy_pass http://remote-chat-ui:2000;
@@ -61,7 +61,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name multichat.openschema.io;
+    server_name multichat.openschema.io openschema-multichat.elpai.org;
 
     #location ~* ^/ui/v1/(.*)$ {
     #    return 204;
