--- a/src/service/gateway/conf.d/ui.conf
+++ b/src/service/gateway/conf.d/ui.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name ui.openschema.io localhost;
+    server_name ui.openschema.io openschema-ui.elpai.org;
 
     #location /ui/v1/remote-template {
     #    #add_header 'Access-Control-Allow-Origin' '*';
