--- a/src/service/gateway/conf.d/api.conf
+++ b/src/service/gateway/conf.d/api.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name api.openschema.io;
+    server_name api.openschema.io openschema-api.elpai.org;
 
     location /api/v1/mcp {
         proxy_pass http://mcp:8000/mcp;
