--- a/src/service/gateway/conf.d/ui.conf
+++ b/src/service/gateway/conf.d/ui.conf
@@ -4,6 +4,7 @@ server {
 
     server_name ui.openschema.io openschema-ui.elpai.org;
 
+    # TODO
     #location /ui/v1/remote-template {
     #    # rewrite ^/ui/v1/remote-template-ui/(.*)$ /$1 break;
     #    proxy_pass http://remote-template-ui:2000;
