--- a/docker-compose-web-template.yaml
+++ b/docker-compose-web-template.yaml
@@ -14,7 +14,7 @@ services:
       dockerfile: docker/web/Dockerfile
       args:
         - SERVICE_DIR=hosts/template
-        - VITE_UI_GATEWAY_URL=http://ui.openschema.io
+        - VITE_UI_GATEWAY_URL=https://openschema-ui.elpai.org
 
   # template for adding new remote ui services
   remote-template-ui:
@@ -23,6 +23,7 @@ services:
       dockerfile: docker/web/Dockerfile
       args:
         - SERVICE_DIR=remotes/template
+        - VITE_UI_GATEWAY_URL=https://openschema-ui.elpai.org
 
 networks:
   shared-net:
