fix: docker pnpm build

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -12,11 +12,11 @@ ARG SERVICE_DIR
 RUN corepack enable
 
 WORKDIR /app
-COPY ${BUILD_CONTEXT_PATH}/pnpm-workspace.yaml ${BUILD_CONTEXT_PATH}/package.json ${BUILD_CONTEXT_PATH}/pnpm-lock.yaml ./
-COPY ${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}/package.json ./apps/${SERVICE_DIR}/package.json
-RUN pnpm install --frozen-lockfile --filter ./apps/${SERVICE_DIR}...
+COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
+COPY ${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}/package.json ./${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}/package.json
+RUN pnpm install --frozen-lockfile --filter ./${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}...
 
-WORKDIR /app/apps/${SERVICE_DIR}
+WORKDIR /app/${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}
 COPY ${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}/. .
 
 RUN pnpm build
@@ -24,10 +24,11 @@ RUN pnpm build
 FROM nginx:alpine
 
 ARG SERVICE_DIR
+ARG BUILD_CONTEXT_PATH=src/web
 
 COPY docker/web/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY docker/web/nginx/conf.d/ /etc/nginx/conf.d/
-COPY --from=build /app/apps/${SERVICE_DIR}/dist /usr/share/nginx/html
+COPY --from=build /app/${BUILD_CONTEXT_PATH}/apps/${SERVICE_DIR}/dist /usr/share/nginx/html
 
 EXPOSE 2000
 
