--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.3",
   "devDependencies": {
-    "@module-federation/vite": "^1.8.1"
+    "@module-federation/vite": "^1.8.1",
+    "typescript": "~5.9.3"
   },
   "dependencies": {
     "react-markdown": "^10.1.0",
