feature: add Config for web docker (replace VITE_ variables)

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,4 @@ OPENAI_API_KEY=TODO
 
 VITE_API_GATEWAY_URL=http://api.openschema.io
 VITE_UI_GATEWAY_URL=http://ui.openschema.io
+VITE_TEMP_ACCESS_TOKEN=TODO
