--- a/.env.example
+++ b/.env.example
@@ -28,12 +28,9 @@ CELERY_REDIS_USER=default
 CELERY_REDIS_PASSWORD=supersecret!
 CELERY_REDIS_DB=1
 
-# for chat service
-#OPENAI_BASE_URL=https://api.openai.com/v1
-#OPENAI_BASE_URL=https://openrouter.ai/api/v1
-OPENAI_BASE_URL=https://chat.elpai.org/v1
-OPENAI_API_KEY=TODO
-
 VITE_API_GATEWAY_URL=http://api.openschema.io
 VITE_UI_GATEWAY_URL=http://ui.openschema.io
 VITE_TEMP_ACCESS_TOKEN=TODO
+
+OPENROUTER_BASE_URL=https://chat.elpai.org/v1
+OPENROUTER_API_KEY=TODO
