--- a/docker/gateway/conf.d/default.conf
+++ b/docker/gateway/conf.d/default.conf
@@ -1,56 +1,11 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  openschema.io www.openschema.io openschema.elpai.org;
-
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-}
-
-server {
     listen 80;
     listen [::]:80;
 
-    server_name chat.openschema.io openschema-chat.elpai.org;
+    server_name multichat.openschema.io;
 
     location / {
-        proxy_pass http://remote-chat-ui:2000;
+        proxy_pass http://host-multichat-ui:2000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,14 +16,32 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name multichat.openschema.io openschema-multichat.elpai.org;
+    server_name _ localhost openschema.io;
 
-    #location ~* ^/ui/v1/(.*)$ {
-    #    return 204;
-    #}
+    # API routes
+    location /api/v1/mcp {
+        proxy_pass http://mcp:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
-    location / {
-        proxy_pass http://host-multichat-ui:2000;
+    location /api/v1/auth {
+        proxy_pass http://auth:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /ui/v1/auth {
+        proxy_pass http://remote-auth-ui:2000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /ui/v1/chat {
+        proxy_pass http://remote-chat-ui:2000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
