--- a/docker/web/nginx/conf.d/default.conf
+++ b/docker/web/nginx/conf.d/default.conf
@@ -1,45 +1,10 @@
-# server {
-#   listen 2000;
-
-#   root /usr/share/nginx/html;
-#   index index.html;
-
-#   location ^~ /ui/v1/[^/]+/assets/ {
-#     try_files $uri =404;
-
-#     add_header Access-Control-Allow-Origin "*" always;
-#     add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-#     add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
-
-#     add_header Cache-Control "public, max-age=31536000, immutable";
-#     access_log off;
-#   }
-
-#   location / {
-#     if ($request_method = OPTIONS) {
-#       add_header Access-Control-Allow-Origin "*" always;
-#       add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, PATCH, OPTIONS" always;
-#       add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
-#       add_header Content-Length 0;
-#       add_header Content-Type text/plain;
-#       return 204;
-#     }
-
-#     add_header Access-Control-Allow-Origin "*" always;
-#     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, PATCH, OPTIONS" always;
-#     add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
-
-#     try_files $uri /index.html;
-#   }
-# }
-
 server {
   listen 2000;
 
   root /usr/share/nginx/html;
   index index.html;
 
-  location ^~ /ui/v1/[^/]+/assets/ {
+  location ^~ /ui/[^/]+/[^/]+/assets/ {
     try_files $uri =404;
   }
 
