--- a/docker/gateway/conf.d/default.conf
+++ b/docker/gateway/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name multichat.openschema.io;
+    server_name multichat.openschema.io openschema-multichat.elpai.org;
 
     location / {
         proxy_pass http://host-multichat-ui:2000;
@@ -16,7 +16,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name _ localhost openschema.io;
+    server_name api.openschema.io openschema-api.elpai.org;
 
     # API routes
     location /api/v1/mcp {
@@ -32,6 +32,20 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /api/v1/chat {
+        proxy_pass http://chat:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name ui.openschema.io openschema-ui.elpai.org;
 
     location /ui/v1/auth {
         proxy_pass http://remote-auth-ui:2000;
